respancivre and update imas

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div id="cons">
             <!-- location -->
     <div class="location">
-        <h1 class="location-timezone">Tidszon</h1>
-        <img class="weather-icon" src="./img/unknown.png" alt="icon">
+        <h1 class="location-timezone">Stad</h1>
+        <img class="weather-icon" src="./img/celsius.png" alt="icon">
     </div>
     
     <!-- Temperature -->
     <div class="temperature">
         <div class="degree-section">
-            <h2 class="temperature-degree">Temperatur i kelvin</h2>
-            <h3 id="city">Kelvin</h3>
+            <h2 class="temperature-degree">Temperatur i stad</h2>
+            <h3 id="city">Stad</h3>
         </div>
         <h4 class="temperature-description">Beskrivning av vädret</h4>
     </div>
