--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <!-- Temperature -->
     <div class="temperature">
         <div class="degree-section">
-            <h2 class="temperature-degree">Temperatur i stad</h2>
+            <h2 class="temperature-degree">0</h2>
+            <img class="celsius" src="./img/celsius1.png" alt="">
             <h3 id="city">Stad</h3>
         </div>
         <h4 class="temperature-description">Beskrivning av vädret</h4>
