--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <!-- location -->
     <div class="location">
         <h1 class="location-timezone">Stad</h1>
-        <img class="weather-icon" src="./img/celsius.png" alt="icon">
+        <img class="weather-icon" src="./img/celsius1.png" alt="icon">
     </div>
     
     <!-- Temperature -->
     <div class="temperature">
         <div class="degree-section">
             <h2 class="temperature-degree">0</h2>
-            <img class="celsius" src="./img/celsius1.png" alt="">
+            <img class="celsius" src="./img/celsius.png" alt="">
             <h3 id="city">Stad</h3>
         </div>
         <h4 class="temperature-description">Beskrivning av vädret</h4>
