--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>API</title>
+    <link rel="icon" href="./img/cloudy.png">
+    <title>Weather Todag</title>
 </head>
 <body>
     <div id="cons">
             <!-- location -->
     <div class="location">
         <h1 class="location-timezone">Stad</h1>
-        <img class="weather-icon" src="./img/celsius1.png" alt="icon">
+        <img class="weather-icon" src="./img/temperature.png" alt="icon">
     </div>
     
     <!-- Temperature -->
